# dae-parser

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: api.rs  lib.rs  macros.rs  url.rs
src/api/: geom.rs  local_map.rs  mod.rs  source.rs
src/core/: anim.rs  camera.rs  control.rs  data.rs  ext.rs  geom.rs  light.rs  meta.rs  mod.rs  scene.rs  transform.rs
src/fx/: effect.rs  material.rs  mod.rs  param.rs  profile.rs  render.rs  texture.rs
src/physics/: material.rs  mod.rs  model.rs  scene.rs  shape.rs
