[package]
name = "dae-parser"
version = "0.8.7"
authors = ["Mario Carneiro <di.gama@gmail.com>"]
edition = "2018"
description = "Parser for the Collada (DAE) format"
repository = "https://github.com/digama0/dae-parser"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["collada", "3d", "format"]
categories = ["parser-implementations", "graphics", "game-development"]
metadata = { msrv = "1.52.1" }

[dependencies]
ref-cast = "1.0"
minidom = "0.14"
percent-encoding = "2.1"
chrono = "0.4"
nalgebra = { version = "0.30", optional = true }
